# thermal_simulation

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  temp_field.csv
include/: Chunk.h  Matrix.h  Output.h  SqList.h  common.h  constant.h  variable.h
src/: Chunk.cpp  Matrix.cpp  Output.cpp  SqList.cpp  main.cpp
tools/plots/: .gitignore  plot.py  requirements.txt
